--- a/eliteshoppy-web/src/main/resources/templates/about.html
+++ b/eliteshoppy-web/src/main/resources/templates/about.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Elite Shoppy an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>Elite Shoppy an Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | About :: w3layouts</title>
 <!--/tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,6 +11,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--//tags -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/team.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //for bootstrap working -->
@@ -94,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 				  <ul class="nav navbar-nav menu__list">
 					<li class="active menu__item"><a class="menu__link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-					<li class=" menu__item"><a class="menu__link" href="about.html">About</a></li>
+					<li class=" menu__item menu__item--current"><a class="menu__link" href="about.html">About</a></li>
 					<li class="dropdown menu__item">
 						<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Men's wear <span class="caret"></span></a>
 							<ul class="dropdown-menu multi-column columns-3">
@@ -168,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">Typography</a></li>
 								</ul>
 					</li>
-					<li class=" menu__item menu__item--current"><a class="menu__link" href="contact.html">Contact</a></li>
+					<li class=" menu__item"><a class="menu__link" href="contact.html">Contact</a></li>
 				  </ul>
 				</div>
 			  </div>
@@ -305,82 +300,71 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- /banner_bottom_agile_info -->
 <div class="page-head_agile_info_w3l">
 		<div class="container">
-			<h3>C<span>ontact Us </span></h3>
+			<h3>About <span>Us </span></h3>
 			<!--/w3_short-->
 				 <div class="services-breadcrumb">
 						<div class="agile_inner_breadcrumb">
 
 						   <ul class="w3_short">
 								<li><a href="index.html">Home</a><i>|</i></li>
-								<li>Contact</li>
+								<li>About</li>
 							</ul>
 						 </div>
 				</div>
 	   <!--//w3_short-->
 	</div>
 </div>
-   <!--/contact-->
+<!-- /banner_bottom_agile_info -->
     <div class="banner_bottom_agile_info">
 	    <div class="container">
-		  <div class="contact-grid-agile-w3s">
-				<div class="col-md-4 contact-grid-agile-w3">
-						<div class="contact-grid-agile-w31">
-							<i class="fa fa-map-marker" aria-hidden="true"></i>
-							<h4>Address</h4>
-							<p>12K Street, 45 Building Road <span>California, USA.</span></p>
-						</div>
-					</div>
-					<div class="col-md-4 contact-grid-agile-w3">
-						<div class="contact-grid-agile-w32">
-							<i class="fa fa-phone" aria-hidden="true"></i>
-							<h4>Call Us</h4>
-							<p>+1234 758 839<span>+1273 748 730</span></p>
-						</div>
-					</div>
-					<div class="col-md-4 contact-grid-agile-w3">
-						<div class="contact-grid-agile-w33">
-							<i class="fa fa-envelope-o" aria-hidden="true"></i>
-							<h4>Email</h4>
-							<p><a href="mailto:info@example.com">info@example1.com</a><span><a href="mailto:info@example.com">info@example2.com</a></span></p>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
+			<div class="agile_ab_w3ls_info">
+				<div class="col-md-6 ab_pic_w3ls">
+				   	<img src="images/ab_pic.jpg" alt=" " class="img-responsive" />
 				</div>
-	   </div>
-	 </div>
-	   <div class="contact-w3-agile1 map" data-aos="flip-right">
-			
-		   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100949.24429313939!2d-122.44206553967531!3d37.75102885910819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1472190196783" class="map" style="border:0" allowfullscreen=""></iframe>
-	   </div>
-   <div class="banner_bottom_agile_info">
+				 <div class="col-md-6 ab_pic_w3ls_text_info">
+				    <h5>About Our Elite <span> Shoppy</span> </h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elPellentesque vehicula augue eget nisl ullamcorper, molestie blandit ipsum auctor. Mauris volutpat augue dolor..</p>
+					<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut lab ore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. labore et dolore magna aliqua.</p>
+				</div>
+				  <div class="clearfix"></div>
+			</div>    
+            <div class="banner_bottom_agile_info_inner_w3ls">
+    	           <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
+						<figure class="effect-roxy">
+							<img src="images/bottom1.jpg" alt=" " class="img-responsive" />
+							<figcaption>
+								<h3><span>F</span>all Ahead</h3>
+								<p>New Arrivals</p>
+							</figcaption>			
+						</figure>
+					</div>
+					 <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
+						<figure class="effect-roxy">
+							<img src="images/bottom2.jpg" alt=" " class="img-responsive" />
+							<figcaption>
+								<h3><span>F</span>all Ahead</h3>
+								<p>New Arrivals</p>
+							</figcaption>			
+						</figure>
+					</div>
+					<div class="clearfix"></div>
+		    </div> 
+		 </div> 
+    </div>
+	<!-- team -->
+<div class="banner_bottom_agile_info team">
 	<div class="container">
-	   <div class="agile-contact-grids">
-				<div class="agile-contact-left">
-					<div class="col-md-6 address-grid">
-						<h4>For More <span>Information</span></h4>
-							<div class="mail-agileits-w3layouts">
-								<i class="fa fa-volume-control-phone" aria-hidden="true"></i>
-								<div class="contact-right">
-									<p>Telephone </p><span>+1 (100)222-23-33</span>
-								</div>
-								<div class="clearfix"> </div>
+	            <h3 class="wthree_text_info">Our Team <span>Members</span></h3>
+			<div class="inner_w3l_agile_grids">
+					<div class="col-md-3 team-grids">
+						<div class="thumbnail team-w3agile">
+							<img src="images/t1.jpg" class="img-responsive" alt="">
+							<div class="social-icons team-icons right-w3l fotw33">
+							<div class="caption">
+								<h4>Joanna Vilken</h4>
+								<p>Add Short Description</p>						
 							</div>
-							<div class="mail-agileits-w3layouts">
-								<i class="fa fa-envelope-o" aria-hidden="true"></i>
-								<div class="contact-right">
-									<p>Mail </p><a href="mailto:info@example.com">info@example.com</a>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="mail-agileits-w3layouts">
-								<i class="fa fa-map-marker" aria-hidden="true"></i>
-								<div class="contact-right">
-									<p>Location</p><span>7784 Diamonds street, California, US.</span>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<ul class="social-nav model-3d-0 footer-social w3_agile_social two contact">
-							                              <li class="share">SHARE ON : </li>
+								<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
 															<li><a href="#" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
@@ -394,39 +378,183 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
-					</div>
-					<div class="col-md-6 contact-form">
-						<h4 class="white-w3ls">Contact <span>Form</span></h4>
-						<form action="#" method="post">
-							<div class="styled-input agile-styled-input-top">
-								<input type="text" name="Name" required="">
-								<label>Name</label>
-								<span></span>
+							          </div>
+						     </div>
+			         	</div>
+						<div class="col-md-3 team-grids">
+						<div class="thumbnail team-w3agile">
+							<img src="images/t2.jpg" class="img-responsive" alt="">
+							<div class="social-icons team-icons right-w3l fotw33">
+							<div class="caption">
+								<h4>Anika Mollik</h4>
+								<p>Add Short Description</p>						
 							</div>
-							<div class="styled-input">
-								<input type="email" name="Email" required=""> 
-								<label>Email</label>
-								<span></span>
-							</div> 
-							<div class="styled-input">
-								<input type="text" name="Subject" required="">
-								<label>Subject</label>
-								<span></span>
+								<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
+															<li><a href="#" class="facebook">
+																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="twitter"> 
+																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="instagram">
+																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="pinterest">
+																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
+														</ul>
+							          </div>
+						     </div>
+			         	</div>
+						<div class="col-md-3 team-grids">
+						<div class="thumbnail team-w3agile">
+							<img src="images/t3.jpg" class="img-responsive" alt="">
+							<div class="social-icons team-icons right-w3l fotw33">
+							<div class="caption">
+								<h4>Megali Deo</h4>
+								<p>Add Short Description</p>						
 							</div>
-							<div class="styled-input">
-								<textarea name="Message" required=""></textarea>
-								<label>Message</label>
-								<span></span>
-							</div>	 
-							<input type="submit" value="SEND">
-						</form>
-					</div>
+								<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
+															<li><a href="#" class="facebook">
+																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="twitter"> 
+																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="instagram">
+																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="pinterest">
+																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
+														</ul>
+							          </div>
+						     </div>
+			         	</div>
+						<div class="col-md-3 team-grids">
+						<div class="thumbnail team-w3agile">
+							<img src="images/t4.jpg" class="img-responsive" alt="">
+							<div class="social-icons team-icons right-w3l fotw33">
+							<div class="caption">
+								<h4>Retas Word</h4>
+								<p>Add Short Description</p>						
+							</div>
+								<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
+															<li><a href="#" class="facebook">
+																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="twitter"> 
+																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="instagram">
+																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
+															<li><a href="#" class="pinterest">
+																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
+														</ul>
+							          </div>
+						     </div>
+			         	</div>
+					<div class="clearfix"> </div>
+				</div>
+	       </div>
+		</div>
+<!-- //team -->
+
+	<!-- schedule-bottom -->
+	<div class="schedule-bottom">
+		<div class="col-md-6 agileinfo_schedule_bottom_left">
+			<img src="images/mid.jpg" alt=" " class="img-responsive" />
+		</div>
+		<div class="col-md-6 agileits_schedule_bottom_right">
+			<div class="w3ls_schedule_bottom_right_grid">
+				<h3>Save up to <span>50%</span> in this week</h3>
+				<p>Suspendisse varius turpis efficitur erat laoreet dapibus. 
+					Mauris sollicitudin scelerisque commodo.Nunc dapibus mauris sed metus finibus posuere.</p>
+				<div class="col-md-4 w3l_schedule_bottom_right_grid1">
+					<i class="fa fa-user-o" aria-hidden="true"></i>
+					<h4>Customers</h4>
+					<h5 class="counter">653</h5>
+				</div>
+				<div class="col-md-4 w3l_schedule_bottom_right_grid1">
+					<i class="fa fa-calendar-o" aria-hidden="true"></i>
+					<h4>Events</h4>
+					<h5 class="counter">823</h5>
+				</div>
+				<div class="col-md-4 w3l_schedule_bottom_right_grid1">
+					<i class="fa fa-shield" aria-hidden="true"></i>
+					<h4>Awards</h4>
+					<h5 class="counter">45</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-       </div>
+		</div>
+		<div class="clearfix"> </div>
 	</div>
- <!--//contact-->
+<!-- //schedule-bottom -->
+  <!-- banner-bootom-w3-agileits -->
+	<div class="banner-bootom-w3-agileits">
+	   <div class="container">
+	     <h3 class="wthree_text_info">What's <span>Trending</span></h3>
+	
+		<div class="col-md-5 bb-grids bb-left-agileits-w3layouts">
+			<a href="women.html">
+			   <div class="bb-left-agileits-w3layouts-inner grid">
+					<figure class="effect-roxy">
+							<img src="images/bb1.jpg" alt=" " class="img-responsive" />
+							<figcaption>
+								<h3><span>S</span>ale </h3>
+								<p>Upto 55%</p>
+							</figcaption>			
+						</figure>
+			    </div>
+			</a>
+		</div>
+		<div class="col-md-7 bb-grids bb-middle-agileits-w3layouts">
+		       <div class="bb-middle-agileits-w3layouts grid">
+			           <figure class="effect-roxy">
+							<img src="images/bottom3.jpg" alt=" " class="img-responsive" />
+							<figcaption>
+								<h3><span>S</span>ale </h3>
+								<p>Upto 55%</p>
+							</figcaption>			
+						</figure>
+		        </div>
+		      <div class="bb-middle-agileits-w3layouts forth grid">
+						<figure class="effect-roxy">
+							<img src="images/bottom4.jpg" alt=" " class="img-responsive">
+							<figcaption>
+								<h3><span>S</span>ale </h3>
+								<p>Upto 65%</p>
+							</figcaption>		
+						</figure>
+					</div>
+		<div class="clearfix"></div>
+	</div>
+    </div>
+</div>
+<!--/grids-->
+      <div class="agile_last_double_sectionw3ls">
+            <div class="col-md-6 multi-gd-img multi-gd-text ">
+					<a href="womens.html"><img src="images/bot_1.jpg" alt=" "><h4>Flat <span>50%</span> offer</h4></a>
+					
+			</div>
+			 <div class="col-md-6 multi-gd-img multi-gd-text ">
+					<a href="womens.html"><img src="images/bot_2.jpg" alt=" "><h4>Flat <span>50%</span> offer</h4></a>
+			</div>
+			<div class="clearfix"></div>
+	   </div>							
+<!--/grids-->
+	<!-- /we-offer -->
+		<div class="sale-w3ls">
+			<div class="container">
+				<h6>We Offer Flat <span>40%</span> Discount</h6>
+ 
+				<a class="hvr-outline-out button2" href="single.html">Shop Now </a>
+			</div>
+		</div>
+	<!-- //we-offer -->
 <!--/grids-->
 <div class="coupons">
 		<div class="coupons-grids text-center">
