--- a/eliteshoppy-web/src/main/webapp/css/style.css
+++ b/eliteshoppy-web/src/main/webapp/css/style.css
@@ -1237,7 +1237,7 @@ h3.agileinfo_sign span {
 	color: #212121 !important;
 }
 
-.modal-body.modal-body-sub_agile input[type="submit"] {
+.modal-body.modal-body-sub_agile input[type="submit"], .modal-body.modal-body-sub_agile input[type="button"] {
 	border: none;
 	padding: 10px 40px 10px;
 	font-size: 14px;
@@ -1250,7 +1250,7 @@ h3.agileinfo_sign span {
 	color: #fff;
 }
 
-.modal-body.modal-body-sub_agile input[type="submit"]:hover {
+.modal-body.modal-body-sub_agile input[type="submit"]:hover, .modal-body.modal-body-sub_agile input[type="button"]:hover {
 	background: #2fdab8;
 }
 
