--- a/eliteshoppy-web/src/main/resources/templates/fragments/header.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/header.html
@@ -2,12 +2,19 @@
 	<div class="container">
 		<ul>
 			<li>
-				<a href="#" data-toggle="modal" data-target="#myModal"> <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+				<a href="#" data-toggle="modal" data-target="#signInModal" class="anonymous"> <i class="fa fa-unlock-alt" aria-hidden="true"></i>
 					Sign In
+				</a>
+				<a th:href="@{/user-account.html}" class="authorized"> <i class="fa fa-user" aria-hidden="true"></i>
+					<span id="authUserName"></span>
 				</a>
 			</li>
 			<li>
-				<a href="#" data-toggle="modal" data-target="#myModal2"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up
+				<a href="#" data-toggle="modal" data-target="#myModal2" class="anonymous"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> 
+					Sign Up
+				</a>
+				<a href="/signout" class="authorized"> <i class="glyphicon glyphicon-log-out" aria-hidden="true"></i> 
+					<span class="authorized">Sign Out</span>
 				</a>
 			</li>
 			<li><i class="fa fa-phone" aria-hidden="true"></i> Call: 01234567898</li>
@@ -203,7 +210,7 @@
 </div>
 
 <!-- Sign in Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+<div class="modal fade" id="signInModal" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
