--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -205,6 +205,22 @@
 	<span id="toTopHover" style="opacity: 1;"></span>
 </a>
 
+<div id="confirmModal" class="modal fade" tabindex="-1" role="dialog">
+	<div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h5 class="modal-title">Confirm</h5>
+            </div>
+            <div class="modal-body" id="modalConfirmText">Are you sure?</div>
+            <div class="modal-footer">
+				<button type="button" data-dismiss="modal" class="btn btn-primary" id="modalConfirmBtn">Yes</button>
+				<button type="button" data-dismiss="modal" class="btn">Cancel</button>
+			</div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/modernizr.custom.js}"></script>
 <script type="text/javascript" th:src="@{/js/minicart.min.js}"></script>
