--- a/eliteshoppy-web/src/main/webapp/css/style.css
+++ b/eliteshoppy-web/src/main/webapp/css/style.css
@@ -6074,6 +6074,17 @@ p.w3ls_para {
 	display: none;
 }
 
-.error, .success{
+.alert-xs {
+	font-size: 0.8em;
+	padding: 8px;
+}
+
+.error-xs {
+	font-weight: normal;
+	margin-bottom: 7px;
+	display: block;
+}
+
+.error, .success {
 	display: none;
 }
