Manage Product code added

--- a/eliteshoppy-web/src/main/resources/templates/fragments/header.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/header.html
@@ -172,12 +172,9 @@
 										</div>
 										<div class="clearfix"></div>
 									</div>
-								</ul></li>
-							<li class="menu__item dropdown authorized seller">
-								<a th:href="@{/products.html}" class="menu__link dropdown-toggle" data-toggle="dropdown">
-									Products
-								</a>
+								</ul>
 							</li>
+							<li class=" menu__item"><a class="menu__link" th:href="@{/product.html}">Products</a></li>
 							<li class=" menu__item"><a class="menu__link" th:href="@{/about.html}">About</a></li>
 							<li class=" menu__item"><a class="menu__link" th:href="@{/contact.html}">Contact</a></li>
 						</ul>
