--- a/eliteshoppy-web/src/main/resources/templates/fragments/head.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/head.html
@@ -21,4 +21,5 @@
 	<link th:href="@{https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,900,900italic,700italic}" rel="stylesheet" type="text/css" />
 	<link th:href="@{css/team.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" media="all" />
+	<link th:href="@{/css/es-style.css}" rel="stylesheet" type="text/css" media="all" />
 </head>
