Attribute controller added

--- a/eliteshoppy-web/src/main/resources/templates/add-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/add-product.html
@@ -26,7 +26,20 @@
 						<div class="form-group col-md-4">
 							<label for="category">Category</label>
 							<select class="form-control" id="category" name="category">
-								<option>Dress</option>
+								<option value="Clothing">Clothing</option>
+								<option value="Wallets">Wallets</option>
+								<option value="Footwear">Footwear</option>
+								<option value="Watches">Watches</option>
+								<option value="Accessories">Accessories</option>
+								<option value="Bags">Bags</option>
+								<option value="Caps & Hats">Caps & Hats</option>
+								<option value="Jewellery">Jewellery</option>
+								<option value="Sunglasses">Sunglasses</option>
+								<option value="Perfumes">Perfumes</option>
+								<option value="Beauty">Beauty</option>
+								<option value="Shirts">Shirts</option>
+								<option value="Sunglasses">Sunglasses</option>
+								<option value="Swimwear">Swimwear</option>
 							</select>
 						</div>
 						<div class="clearfix"></div>
@@ -34,13 +47,26 @@
 							<label for="availableQuantity">Available Quantity</label>
 							<input type="number" class="form-control" id="availableQuantity" name="availableQuantity" placeholder="Available Quantity" />
 						</div>
-						<div class="form-group col-md-4">
+						<div class="form-group col-md-2">
 							<label for="price">Price</label>
 							<input type="number" class="form-control" id="price" name="price" placeholder="Price" />
 						</div>
+						<div class="form-group col-md-2">
+							<label for="idealFor">Ideal For</label>
+							<select class="form-control" id="idealFor" name="idealFor">
+								<option value="men">Men</option>
+								<option value="woman">Woman</option>
+							</select>
+						</div>
+						<div class="clearfix"></div>
 						<div class="form-group col-md-8">
 							<label for="price">Description</label>
 							<textarea class="form-control" id="description" name="description" placeholder="Description"></textarea>
+						</div>
+						<div class="clearfix"></div>
+						<div class="form-group col-md-8">
+							<label for="attributes">Attributes</label>
+							<select></select>
 						</div>
 						<div class="clearfix"></div>
 						<div class="col-md-4">
