--- a/eliteshoppy-web/src/main/resources/templates/add-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/add-product.html
@@ -43,7 +43,14 @@
 							</select>
 						</div>
 						<div class="clearfix"></div>
-						<div class="form-group col-md-4">
+						<div class="form-group col-md-2">
+							<label for="idealFor">Ideal For</label>
+							<select class="form-control" id="idealFor" name="idealFor">
+								<option value="men">Men</option>
+								<option value="woman">Woman</option>
+							</select>
+						</div>
+						<div class="form-group col-md-2">
 							<label for="availableQuantity">Available Quantity</label>
 							<input type="number" class="form-control" id="availableQuantity" name="availableQuantity" placeholder="Available Quantity" />
 						</div>
@@ -52,11 +59,8 @@
 							<input type="number" class="form-control" id="price" name="price" placeholder="Price" />
 						</div>
 						<div class="form-group col-md-2">
-							<label for="idealFor">Ideal For</label>
-							<select class="form-control" id="idealFor" name="idealFor">
-								<option value="men">Men</option>
-								<option value="woman">Woman</option>
-							</select>
+							<label for="offerPrice">Offer Price</label>
+							<input type="number" class="form-control" id="offerPrice" name="offerPrice" placeholder="Offer Price" />
 						</div>
 						<div class="clearfix"></div>
 						<div class="form-group col-md-8">
@@ -64,9 +68,43 @@
 							<textarea class="form-control" id="description" name="description" placeholder="Description"></textarea>
 						</div>
 						<div class="clearfix"></div>
-						<div class="form-group col-md-8">
+						<div class="form-group col-md-2">
 							<label for="attributes">Attributes</label>
-							<select></select>
+							<select class="form-control" id="atrList">
+								
+							</select>
+						</div>
+						<div class="col-md-6">
+							<table class="table table-hover table-sm">
+								<thead class="thead-dark">
+									<tr>
+										<th scope="col">#</th>
+										<th scope="col">First</th>
+										<th scope="col">Last</th>
+										<th scope="col">Handle</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th scope="row">1</th>
+										<td>Mark</td>
+										<td>Otto</td>
+										<td>@mdo</td>
+									</tr>
+									<tr>
+										<th scope="row">2</th>
+										<td>Jacob</td>
+										<td>Thornton</td>
+										<td>@fat</td>
+									</tr>
+									<tr>
+										<th scope="row">3</th>
+										<td>Larry</td>
+										<td>the Bird</td>
+										<td>@twitter</td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 						<div class="clearfix"></div>
 						<div class="col-md-4">
