--- a/eliteshoppy-web/src/main/webapp/css/es-style.css
+++ b/eliteshoppy-web/src/main/webapp/css/es-style.css
@@ -30,3 +30,13 @@
 form label {
 	font-size: 95%;
 }
+
+.table .thead-dark th {
+    color: #fff;
+    background-color: #212529;
+    border-color: #32383e;
+}
+
+.table-sm th, .table-sm td {
+	padding: 2px !important;
+}
