Attribute management added

--- a/eliteshoppy-web/src/main/resources/templates/add-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/add-product.html
@@ -75,13 +75,12 @@
 							</select>
 						</div>
 						<div class="col-md-6">
-							<table class="table table-hover table-sm">
+							<table class="table table-hover table-sm" style="margin-top: 22px;">
 								<thead class="thead-dark">
 									<tr>
-										<th scope="col">#</th>
-										<th scope="col">First</th>
-										<th scope="col">Last</th>
-										<th scope="col">Handle</th>
+										<th scope="col">Attribute</th>
+										<th scope="col">Values</th>
+										<th scope="col">Action</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -89,19 +88,16 @@
 										<th scope="row">1</th>
 										<td>Mark</td>
 										<td>Otto</td>
-										<td>@mdo</td>
 									</tr>
 									<tr>
 										<th scope="row">2</th>
 										<td>Jacob</td>
 										<td>Thornton</td>
-										<td>@fat</td>
 									</tr>
 									<tr>
 										<th scope="row">3</th>
 										<td>Larry</td>
 										<td>the Bird</td>
-										<td>@twitter</td>
 									</tr>
 								</tbody>
 							</table>
