--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -308,3 +308,4 @@
 <script type="text/javascript" th:src="@{/js/app/core/api-global.js}"></script>
 <script type="text/javascript" th:src="@{/js/app/core/auth.js}"></script>
 <script type="text/javascript" th:src="@{/js/app/core/es-core.js}"></script>
+<script type="text/javascript" th:src="@{/js/tag-input.js}"></script>
