--- a/eliteshoppy-web/src/main/resources/templates/fragments/header.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/header.html
@@ -175,6 +175,7 @@
 								</ul>
 							</li>
 							<li class=" menu__item authorized seller admin"><a class="menu__link" th:href="@{/product.html}">Products</a></li>
+							<li class=" menu__item authorized admin"><a class="menu__link" th:href="@{/attribute.html}">Attributes</a></li>
 							<li class=" menu__item"><a class="menu__link" th:href="@{/about.html}">About</a></li>
 							<li class=" menu__item"><a class="menu__link" th:href="@{/contact.html}">Contact</a></li>
 						</ul>
