--- a/eliteshoppy-web/src/main/webapp/css/style.css
+++ b/eliteshoppy-web/src/main/webapp/css/style.css
@@ -566,7 +566,6 @@ a.menu__link {
 /*-- //left nav --*/
 .top_nav_right {
 	float: right;
-	width: 21%;
 }
 
 .box_1 {
@@ -2806,7 +2805,7 @@ section#tables  p {
 
 .table td, .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td,
 	.table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-	padding: 15px !important;
+	padding: 15px;
 }
 
 .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td,
