--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -303,9 +303,9 @@
 </script>
 
 <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
-
 <!-- Application Js -->
 <script type="text/javascript" th:src="@{/js/app/core/api-global.js}"></script>
 <script type="text/javascript" th:src="@{/js/app/core/auth.js}"></script>
 <script type="text/javascript" th:src="@{/js/app/core/es-core.js}"></script>
 <script type="text/javascript" th:src="@{/js/tag-input.js}"></script>
+<script type="text/javascript" th:src="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.min.js}"></script>
