Add attribute and add product changes

--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -103,7 +103,7 @@
 							<div class="w3-address-right">
 								<h6>Email Address</h6>
 								<p>
-									Email :<a href="info@eliteshoppy.com"> info@eliteshoppy.com</a>
+									Email :<a href="mailto:info@eliteshoppy.com"> info@eliteshoppy.com</a>
 								</p>
 							</div>
 							<div class="clearfix"></div>
