--- a/eliteshoppy-web/src/main/resources/templates/add-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/add-product.html
@@ -46,8 +46,9 @@
 						<div class="form-group col-md-2">
 							<label for="idealFor">Ideal For</label>
 							<select class="form-control" id="idealFor" name="idealFor">
-								<option value="men">Men</option>
-								<option value="woman">Woman</option>
+								<option value="Men">Men</option>
+								<option value="Woman">Woman</option>
+								<option value="Both">Both</option>
 							</select>
 						</div>
 						<div class="form-group col-md-2">
