--- a/eliteshoppy-web/src/main/resources/templates/add-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/add-product.html
@@ -18,14 +18,14 @@
 				<div class="alert alert-danger hide" id="error">Something went wrong!</div>
 
 				<div class="row">
-					<form role="form">
+					<form role="form" name="addProductForm" id="addProductForm">
 						<div class="form-group col-md-4">
 							<label for="name">Name</label>
-							<input type="text" class="form-control" id="name" name="name" placeholder="Product Name" />
+							<input type="text" class="form-control" id="name" name="name" placeholder="Product Name" required/>
 						</div>
-						<div class="form-group col-md-4">
+						<div class="form-group col-md-2">
 							<label for="category">Category</label>
-							<select class="form-control" id="category" name="category">
+							<select class="form-control" id="category" name="category" required>
 								<option value="Clothing">Clothing</option>
 								<option value="Wallets">Wallets</option>
 								<option value="Footwear">Footwear</option>
@@ -42,10 +42,9 @@
 								<option value="Swimwear">Swimwear</option>
 							</select>
 						</div>
-						<div class="clearfix"></div>
 						<div class="form-group col-md-2">
 							<label for="idealFor">Ideal For</label>
-							<select class="form-control" id="idealFor" name="idealFor">
+							<select class="form-control" id="idealFor" name="idealFor" required>
 								<option value="Men">Men</option>
 								<option value="Woman">Woman</option>
 								<option value="Both">Both</option>
@@ -53,58 +52,43 @@
 						</div>
 						<div class="form-group col-md-2">
 							<label for="availableQuantity">Available Quantity</label>
-							<input type="number" class="form-control" id="availableQuantity" name="availableQuantity" placeholder="Available Quantity" />
+							<input type="number" class="form-control" id="availableQuantity" name="availableQuantity" placeholder="Available Quantity"  required/>
 						</div>
 						<div class="form-group col-md-2">
 							<label for="price">Price</label>
-							<input type="number" class="form-control" id="price" name="price" placeholder="Price" />
-						</div>
-						<div class="form-group col-md-2">
-							<label for="offerPrice">Offer Price</label>
-							<input type="number" class="form-control" id="offerPrice" name="offerPrice" placeholder="Offer Price" />
+							<input type="number" class="form-control" id="price" name="price" placeholder="Price"  required/>
 						</div>
 						<div class="clearfix"></div>
-						<div class="form-group col-md-8">
+						<div class="form-group col-md-2">
+							<label for="offerPrice">Offer Price</label>
+							<input type="number" class="form-control" id="offerPrice" name="offerPrice" placeholder="Offer Price"  required/>
+						</div>
+						<div class="form-group col-md-10">
 							<label for="price">Description</label>
-							<textarea class="form-control" id="description" name="description" placeholder="Description"></textarea>
+							<textarea class="form-control" id="description" name="description" placeholder="Description" rows="8" required></textarea>
 						</div>
 						<div class="clearfix"></div>
 						<div class="form-group col-md-2">
 							<label for="attributes">Attributes</label>
-							<select name="attributes" id="attributes" multiple="multiple" class="form-control">
+							<select name="attributes" id="attributes" multiple="multiple" class="form-control" required>
 							</select>
 						</div>
-						<div class="col-md-8">
-							<table class="table table-hover table-sm" style="margin-top: 22px;">
+						<div class="col-md-10">
+							<table class="table table-hover table-sm with-input" style="margin-top: 22px;">
 								<thead class="thead-dark">
 									<tr>
-										<th scope="col" style="width:10%">Attribute</th>
+										<th scope="col" style="width:12%">Attribute</th>
 										<th scope="col">Values</th>
-										<th scope="col" style="width:10%">Action</th>
+										<th scope="col" style="width:8%" class="text-center">Action</th>
 									</tr>
 								</thead>
 								<tbody id="atrBody">
-									<tr>
-										<th scope="row">1</th>
-										<td>Mark</td>
-										<td>Otto</td>
-									</tr>
-									<tr>
-										<th scope="row">2</th>
-										<td>Jacob</td>
-										<td>Thornton</td>
-									</tr>
-									<tr>
-										<th scope="row">3</th>
-										<td>Larry</td>
-										<td>the Bird</td>
-									</tr>
 								</tbody>
 							</table>
 						</div>
 						<div class="clearfix"></div>
 						<div class="col-md-4">
-							<input type="button" class="btn btn-info" value="Add" onclick="addProduct()"/>
+							<input type="button" class="btn btn-info" value="Add" onclick="addProduct()" id="addBtn" />
 							<input type="reset" class="btn btn-default" value="Reset" />
 						</div>
 					</form>
