--- a/eliteshoppy-web/src/main/resources/templates/fragments/head.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/head.html
@@ -23,5 +23,6 @@
 	<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/es-style.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{/css/bootsnip.css}" rel="stylesheet" type="text/css" media="all" />
+	<link th:href="@{/css/fileinput.min.css}" rel="stylesheet" type="text/css" media="all" />
 	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css}" rel="stylesheet" />
 </head>
