get all image rest method added

--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -303,6 +303,8 @@
 </script>
 
 <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.jcarousel.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/jcarousel.connected-carousels.js}"></script>
 <!-- Application Js -->
 <script type="text/javascript" th:src="@{/js/app/core/api-global.js}"></script>
 <script type="text/javascript" th:src="@{/js/app/core/auth.js}"></script>
