--- a/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/footer.html
@@ -125,7 +125,8 @@
 		</div>
 		<div class="clearfix"></div>
 		<p class="copy-right">
-			&copy <span id="cpyear">2019</span> Elite shoppy. All rights reserved | Design by <a href="https://github.com/Pradeeshbm">Pradeesh Bm</a>
+			&copy <span id="cpyear">2019</span> Elite shoppy. All rights reserved | Design by <a href="https://github.com/Pradeeshbm">Pradeesh Bm</a><br />
+			This is an experimental web site.
 		</p>
 	</div>
 </div>
