--- a/eliteshoppy-web/src/main/resources/templates/index.html
+++ b/eliteshoppy-web/src/main/resources/templates/index.html
@@ -1665,3 +1665,4 @@
 		<div th:replace="fragments/footer-grid"></div>
 	</div>
 </div>
+<script type="text/javascript" th:src="@{/js/app/index.js}"></script>
