Image find changes

--- a/eliteshoppy-web/src/main/resources/templates/edit-product.html
+++ b/eliteshoppy-web/src/main/resources/templates/edit-product.html
@@ -47,7 +47,7 @@
 							<label for="idealFor">Ideal For</label>
 							<select class="form-control" id="idealFor" name="idealFor" required>
 								<option value="Men">Men</option>
-								<option value="Woman">Woman</option>
+								<option value="Women">Women</option>
 								<option value="Both">Both</option>
 							</select>
 						</div>
